apps/uptime-kuma/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  labels:
    app.kubernetes.io/name: uptime-kuma
  annotations:
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: "uptime.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-uptime-kuma
                port:
                  number: 80
  tls:
    - hosts:
        - uptime.local
      secretName: uptime-kuma-tls
